# Robot_Gui_V3

./: CMakeLists.txt  CommonFunctions.cpp  CommonFunctions.h  ConfigStructs.h  Constants.h  CoreGUI.cpp  CoreGUI.h  CoreGui.cpp  CoreGui.h  CustomJSONStructure.h  GUIMaker.cpp  GUIMaker.h  GuiCore.cpp  GuiCore.h  GuiInstance.cpp  GuiInstance.h  InternalJson.cpp  InternalJson.h  Menu.cpp  Menu.h  README.md  RobotGUI.cpp  RobotGUI.h  RobotGui.h  TestClient.py  Theme.cpp  Theme.h  WidgetData.cpp  WidgetData.h  WidgetInfo.cpp  WidgetInfo.h  main.cpp
ConfigExamples/: BasicConfig.xml  Example2.xml  REDBLUE.xml  TestWrite.xml  WHOI.xml
Configuration/: ConfigStructs.h  TabInfo.cpp  TabInfo.h  WidgetInfo.cpp  WidgetInfo.h
CoreWidgets/: MenuWidget.cpp
CustomWidgets/: AnnunciatorWidget.cpp  AnnunciatorWidget.h  BaseWidget.cpp  BaseWidget.h  BaseWidgetCollection.cpp  BaseWidgetCollection.h  Browse.cpp  Browse.h  CompassWidget.cpp  CompassWidget.h  CompleteConsoleWidget.cpp  CompleteConsoleWidget.h  DropDownTextBoxWidget.cpp  DropDownTextBoxWidget.h  LivePlotWidget.cpp  LivePlotWidget.h  MenuWidget.cpp  MenuWidget.h  MissionStatusWidget.cpp  MissionStatusWidget.h  MultiBarGraphWidget.cpp  MultiBarGraphWidget.h  ROVStatusWidget.cpp  ROVStatusWidget.h  SettingsTab.cpp  SettingsTab.h  SimpleButtonWidget.cpp  SimpleButtonWidget.h  SimpleConsoleWidget.cpp  SimpleConsoleWidget.h  TabWidget.cpp  TabWidget.h  TextBoxWidget.cpp  TextBoxWidget.h  VideoWidget.cpp  VideoWidget.h
CustomWidgets/SettingsPanels/: BaseSettingsPanel.cpp  BaseSettingsPanel.h  InterfaceSettings.cpp  InterfaceSettings.h  RawDataView.cpp  RawDataView.h
CustomWidgets/WidgetParts/: BaseGraphDisplay.h  BasicImageDisplay.cpp  BasicImageDisplay.h  CircleBarGraph.cpp  CircleBarGraph.h  CompassDisplay.cpp  CompassDisplay.h  LineTextDisplay.cpp  LineTextDisplay.h  SideTabWidget.cpp  SideTabWidget.h  SimpleBarGraph.cpp  SimpleBarGraph.h
ExampleXML/: BasicConfig.xml  Example1.xml  Example2.xml  ExampleBad.xml  TestWrite.xml
Interface/: BaseInterface.cpp  BaseInterface.h  DataInput.cpp  DataInput.h  FlagCheckerInterface.cpp  LocalServer.cpp  LocalServer.h  RandomDataInterface.cpp  RandomDataInterface.h  ServerInterface.cpp  ServerInterface.h  Test.py  TestClient.py  ThreadedInterface.cpp  ThreadedInterface.h  WebcamStreamInterface.h
Networking/: LocalServer.cpp  LocalServer.h  TestClient.py
XML/: AppConfig.cpp  AppConfig.h  Config.cpp  Config.h  XMLConstants.h  XMLInput.cpp  XMLInput.h  XMLOutput.cpp  XMLOutput.h
XML/rapidxml/: rapidxml.hpp  rapidxml_print.hpp
scripts/: compile_helper.bash
src/: CustomJSONStructure.h  GUIMaker.cpp  GUIMaker.h  GuiCore.cpp  GuiCore.h  GuiInstance.cpp  GuiInstance.h  InternalJson.cpp  InternalJson.h  RobotGui.h  Theme.cpp  Theme.h
src/Config/: AppConfig.cpp  AppConfig.h  XMLInput.cpp  XMLInput.h  XMLOutput.cpp  XMLOutput.h
src/CoreWidgets/: MenuWidget.cpp  MenuWidget.h
src/CustomWidgets/: AnnunciatorWidget.cpp  AnnunciatorWidget.h  AttitudeWidget.cpp  AttitudeWidget.h  BaseWidget.cpp  BaseWidget.h  CompassWidget.cpp  CompassWidget.h  CompleteConsoleWidget.cpp  CompleteConsoleWidget.h  DropDownTextBoxWidget.cpp  DropDownTextBoxWidget.h  LivePlotWidget.cpp  LivePlotWidget.h  MissionStatusWidget.cpp  MissionStatusWidget.h  MultiBarGraphWidget.cpp  MultiBarGraphWidget.h  ROVStatusWidget.cpp  ROVStatusWidget.h  SettingsTab.cpp  SettingsTab.h  SimpleButtonWidget.cpp  SimpleButtonWidget.h  SimpleConsoleWidget.cpp  SimpleConsoleWidget.h  TabWidget.cpp  TabWidget.h  TextBoxWidget.cpp  TextBoxWidget.h  VideoWidget.cpp  VideoWidget.h
src/CustomWidgets/BaseStructure/: BaseWidget.cpp  BaseWidget.h  ColorEntry.h  WidgetBaseConfig.cpp  WidgetBaseConfig.h  WidgetSettingsDialog.cpp  WidgetSettingsDialog.h
src/CustomWidgets/BaseWidgetHelper/: BaseWidget.cpp  BaseWidget.h
src/CustomWidgets/LineConfigWidgets/: LineConfig.cpp  LineConfig.h  LineEntry.h  LivePlotWidget.cpp  LivePlotWidget.h  MultiBarGraphWidget.cpp  MultiBarGraphWidget.h  TextBoxWidget.cpp  TextBoxWidget.h
src/CustomWidgets/SettingsPanels/: BaseSettingsPanel.cpp  BaseSettingsPanel.h  InterfaceSettings.cpp  InterfaceSettings.h  RawDataView.cpp  RawDataView.h
src/CustomWidgets/SourceMapConfigWidgets/: AttitudeWidget.cpp  AttitudeWidget.h  MissionStatusWidget.cpp  MissionStatusWidget.h  ROVStatusWidget.cpp  ROVStatusWidget.h  SourceMapConfig.cpp  SourceMapConfig.h
src/CustomWidgets/WidgetCollectionConfig/: TabWidget.cpp  TabWidget.h  WidgetCollectionConfig.cpp  WidgetCollectionConfig.h
src/CustomWidgets/WidgetParts/: AttitudeDisplay.cpp  AttitudeDisplay.h  BaseGraphDisplay.h  BasicImageDisplay.cpp  BasicImageDisplay.h  CircleBarGraph.cpp  CircleBarGraph.h  CompassDisplay.cpp  CompassDisplay.h  LineTextDisplay.cpp  LineTextDisplay.h  SideTabWidget.cpp  SideTabWidget.h  SimpleBarGraph.cpp  SimpleBarGraph.h
src/Interface/: BaseInterface.cpp  BaseInterface.h  DataInput.cpp  DataInput.h  FlagCheckerInterface.cpp  FlagCheckerInterface.h  RandomDataInterface.cpp  RandomDataInterface.h  ServerInterface.cpp  ServerInterface.h  Test.py  TestClient.py  ThreadedInterface.cpp  ThreadedInterface.h  WHOI.py  WebcamStreamInterface.cpp  WebcamStreamInterface.h
src/XML/: AppConfig.h  XMLOutput.cpp  XMLOutput.h
